# check_by_torrent

./: .coverage  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: check.yml
.windsurf/rules/: use-uv.md
check_by_torrent/: __init__.py  __main__.py  check_by_torrent.py  cli.py
tests/: conftest.py  test_cli.py  test_core.py
tests/data/: real_sample.torrent
tests/integration/: test_core.py  test_dry_run_orphans.py
tests/unit/: test_cli.py  test_core.py  test_helpers.py
