[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "check-by-torrent"
version = "0.1.0"
description = "A command-line utility to verify the integrity of downloaded torrent files against their .torrent metadata"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "luni", email = "lunix@mirkx.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "bencodepy>=0.9.5",
    "tqdm>=4.67.1",
]


[project.scripts]
check-by-torrent = "check_by_torrent.cli:main"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=check_by_torrent --cov-report=term-missing {args:tests}"
lint = "ruff check ."
format = "ruff format ."
check = [
    "ruff check .",
    "ruff format --check .",
    "pytest",
]

[tool.ruff]
line-length = 160
indent-width = 4  # Same as autopep8 default
target-version = "py310"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-select = [
    "ANN",
    "UP",
    "UP042",
    "I"
]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "PL",  # pylint
    "RUF", # ruff-specific rules
]

ignore = ["D203", "D213", "D100", "F821"]  # Ignore specific docstring rules



[tool.ruff.lint.mccabe]
max-complexity = 10

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.2",
    "ruff>=0.13.3",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pyright>=1.1.407",
    "vulture>=2.14",
]

[tool.pyright]
exclude = ["**/__pycache__", "**/node_modules", "**/dist", "**/build", "**/venv", "**/.venv", "**/tests"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B324"]  # SHA1 is mandated by the torrent spec


[tool.vulture]
exclude = ["dist", "build", "venv", ".venv", "tests"]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["visit_*", "do_*"]
# make_whitelist = true
min_confidence = 80
paths = ["."]
sort_by_size = true


[project.urls]
Homepage = "https://github.com/luni/check-by-torrent"
"Bug Tracker" = "https://github.com/luni/check-by-torrent/issues"
